comp.jj
PARSER_BEGIN(comp)
import java.io.*;
class comp
{ 
	public static void main ( String[] args ) throws ParseException, Exception
	{
		try
		{
			comp analizador = new comp ( System.in);
			analizador.Programa();
			System.out.println("\tAnalizador ha terminado. ");
		}
		catch(ParseException e)
		{
			System.out.println(e.getMessage());
			System.out.println("\tAnalizador ha terminado. ");
		}
	}
}
PARSER_END(comp)

TOKEN:
{
	 <ASIGNACION : "=">
	| <PLUS : "+">
	|<MINUS : "-">
	|<MULTIPLY : "*">
	|<DIVIDE : "/">
	|<INCR : "++">
	|<DECR : "--">
}
TOKEN:
{
	 <PUBLIC: "public">
	| <PRIVATE : "private">
	| <STATIC: "static">
	| <VOID: "void">
	| <MAIN: "public static void Main()">
	| <PROGRAMA: "Programa">
	| <IF: "ien">
	| <ELSE: "iotro">
	| <ELSEIF: "ien otro">
	| <FOR: "irepetir">
	| <SWITCH: "ialternativa">
	| <CASE: "iopcion">
	| <BREAK: "itermina">
	| <DEFAUL: "ipredef">
	| <DO: "ia">
	| <WHILE: "iespera">
	| <WRITE: "iescribir">
	| <READ: "ileer">
}
TOKEN:
{
	 <LPAREN: "(">
	| <RPAREN: ")">
	| <LBRACE: "{">
	| <RBRACE: "}">
	| <LBRACKET: "[">
	| <RBRACKET: "]">
	| <SEMICOLON: ";">
	| <COMMA: ",">
	| <DOT: ".">
	| <DOUBLECOMMA: "\"">

}
TOKEN:
{
	<EQ: "==">
|	<LE: "<=">
|	<MN: "<">
|	<GE: ">=">
|	<GR: ">">
|	<NE: "!=">
|	<OR: "||">
|	<AND: "&&">
}
TOKEN:
{
	 <INT: "inum"> //44
	| <DEC: "idec"> //45
	| <CHR: "ichr"> //46
	| <STR: "istr"> //47
	| <NUMBER: (["0"-"9"])+> //48
	| <IDENTIFIER: ["a"-"z","A"-"Z"](["a"-"z","A"-"Z", "0"-"9","_"])*>
	| <DECIMAL: (["0"-"9"])+["."](["0"-"9"])+>//50
	| <CADENA: <DOUBLECOMMA>["a"-"z","A"-"Z", "0"-"9"," "](["a"-"z","A"-"Z", "0"-"9"," ", ":", ";", "."])*<DOUBLECOMMA>>//51
	| <CARAC: "'"["a"-"z","A"-"Z", "0"-"9"]"'">//52
	| <DOUBLEPOINT: ":">
}

SKIP:
{
	" " | "\n" | "\r" | "\r\n" | "\t"
}

void Programa():
{}
{
	//Agregamos un token de palabra reservada
	//<INT> {System.out.println("kind : "+token.kind)}
	<PROGRAMA><IDENTIFIER><LBRACE>Bloque()<RBRACE><EOF>
}

void Bloque():
{}
{
	LOOKAHEAD(2)VariablesGlobales() | Principal()
}

void VariablesGlobales():
{}
{
	(<PRIVATE>|<PUBLIC>)(<INT>|<DEC>|<STR>|<CHR>) <IDENTIFIER>(<COMMA><IDENTIFIER>)* <SEMICOLON> Bloque()
}

void Principal():
{
	TokenAsignaciones.SetTables();
}
{
	<MAIN>
	<LBRACE> Sentencias()<RBRACE>
}
void VariablesLocales():
{
	int td;
	Token var;
}
{
	(
		(TiposDatos())
		{
			td= token.kind;
		}
		var=<IDENTIFIER>
		{
			TokenAsignaciones.InsertarSimbolo(var, td);
		}
		[VariablesAsignacion(var)]
		(
			<COMMA>
			var=<IDENTIFIER>
			{
				TokenAsignaciones.InsertarSimbolo(var, td);
			}
			[VariablesAsignacion(var)]
		)*
		<SEMICOLON>
	)
	(VS())
}
void VariablesAsignacion(Token v1):
{
	Token v2;
	Token v3;
	String res;
	boolean imp=false;
}
{
	<ASIGNACION>
	(TiposAsignaciones())
	{
		v2=token;
		res=TokenAsignaciones.checkAsing(v1, v2);

		if(res != " ")
		{
			System.out.println(res);
			imp=true;
		}
	}
	(OpAritmetico()
	TiposAsignaciones()
	{
		v3= token;
		res= TokenAsignaciones.checkAsing(v1, v3);

		if(res != " " && !imp)
		{
			System.out.println(res);
		}
	})*
}
void VS():
{}
{
	LOOKAHEAD(3)VariablesLocales() | Sentencias()
}
void Sentencias():
{}
{
	(
		 VariablesLocales()
		| SentenciaIf()
		| SentenciaFor()
		| SentenciaDo()
		| LOOKAHEAD(2)SentenciaAsignacion()<SEMICOLON>{TokenAsignaciones.segunda =0;}
		| SentenciaWrite()
		| SentenciaRead()<SEMICOLON>
		| SentenciaSwitch()
	)*
}
//Sentencia IF
void SentenciaIf():
{}
{
	<IF><LPAREN> A() <RPAREN> <LBRACE> Sentencias() <RBRACE> (Sino())*
}
void Sino():
{}
{
	<ELSE><LBRACE> Sentencias() <RBRACE> | <ELSEIF> <LPAREN> A() <RPAREN> <LBRACE> Sentencias() <RBRACE>
}
void A():
{}
{
	Comparaciones() ([(<AND>|<OR>)] Comparaciones())*
}
//Fin sentencia IF
void Comparaciones():
{}
{
	Valor() Operadores() Valor()
}
void Valor():
{}
{
	LOOKAHEAD(2) (<IDENTIFIER> | <NUMBER>) | Expresion()
}
void Expresion():
{}
{
	LOOKAHEAD(2) (<NUMBER> | <IDENTIFIER>) | (<IDENTIFIER> | <NUMBER>)OpAritmetico() (<IDENTIFIER> | <NUMBER>)
}
void Operadores():
{}
{
	<EQ>
	| <LE>
	| <GE>
	| <NE>
	| <GR>
	| <MN>
}
int OpAritmetico():
{}
{
	(<PLUS> {return 1;})
	|(<MINUS> {return 1;})
	|(<MULTIPLY> {return 1;})
	|(<DIVIDE> {return 1;})
	|{return 0;}
}
void TiposDatos():
{}
{
	<INT>
	| <DEC>
	| <STR>
	| <CHR>
}

//Sentencias FOR
void SentenciaFor():
{}
{
	<FOR> <LPAREN>(DeclaracionUnaVAriable()| SentenciaAsignacion())<SEMICOLON> Comparaciones() <SEMICOLON> SentenciaAsignacion() <RPAREN> <LBRACE> Sentencias() <RBRACE>
}
void DeclaracionUnaVAriable():
{
	int td;
	Token var;
}
{
	(TiposDatos())
	{
		td=token.kind;
	}
	var=<IDENTIFIER>
	{
		TokenAsignaciones.InsertarSimbolo(var, td);
	}
	[VariablesAsignacion(var)]
}
//Sentencia DO
void SentenciaDo():
{}
{
	<DO> <LBRACE> Sentencias() <RBRACE> <WHILE> <LPAREN> Comparaciones() <RPAREN> | SentenciaWhile()
}
void SentenciaWhile():
{}
{
	<WHILE> <LPAREN> Comparaciones() <RPAREN> <LBRACE> Sentencias() <RBRACE>
}
//Sentencia ASIGNACION
void SentenciaAsignacion():
{
	Token v1;
	Token v2;
	Token v3;
	int aux;
	String res;
	boolean imp= false;
}
{
	v1 = <IDENTIFIER>
	(<ASIGNACION>
	(TiposAsignaciones())
	{
		v2=token;
		res= TokenAsignaciones.checkAsing(v1, v2);

		if(res != " ")
		{
			System.out.println(res);
			imp=true;
		}
	}
	(LOOKAHEAD(2)OpAritmetico()
	TiposAsignaciones()
	{
		v3=token;
		res= TokenAsignaciones.checkAsing(v1, v3);

		if(res!= " " && !imp)
		{
			System.out.println(res);
		}
	})*
	|
	(<INCR> |<DECR>)
	{
		res= TokenAsignaciones.checkVariable(v1);
		if(res != " ")
		System.out.println(res);
	})
	//SentenciaAsignacion ya trae <SEMICOLON> en el metodo Sentencias()
}
void TiposAsignaciones():
{}
{
	<IDENTIFIER>
	|<NUMBER>
	|<DECIMAL>
	|<CADENA>
	|<CARAC>
}
//Sentencia Write
void SentenciaWrite():
{}
{
	<WRITE> <LPAREN> (Expresion()(<PLUS><CADENA>)*|<CADENA>(<PLUS>Expresion())*)* <RPAREN> <SEMICOLON>
}
//sentencia READ
void SentenciaRead():
{}
{
	<READ><LPAREN><RPAREN>
}
void SentenciaSwitch():
{}
{
	<SWITCH><LPAREN><IDENTIFIER><RPAREN><LBRACE>(<CASE>(<IDENTIFIER>|<CADENA>|<CARAC>|<NUMBER>|<DECIMAL>)
	<DOUBLEPOINT> (SentenciaAsignacion()<SEMICOLON>)+<BREAK><SEMICOLON>)+[<DEFAUL><DOUBLEPOINT>(SentenciaAsignacion()<SEMICOLON>)<BREAK><SEMICOLON>]<RBRACE>
}
